2003-12-12  Bruno Haible  <bruno@clisp.org>

	Assume automake-1.8.
	* Makefile.am (install-exec-local): Renamed from install-exec-am.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* alloca.c: Remove file.
	* Makefile.am (LIBADD_SOURCE): Remove alloca.c.
	(libgettextlib_la_LIBADD): Drop @LTALLOCA@.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	Safer stack allocation.
	* allocsa.h: New file.
	* allocsa.c: New file.
	* xallocsa.h: New file.
	* xallocsa.c: New file.
	* canonicalize.c: Include allocsa.h.
	(__realpath): Use allocsa instead of alloca. Don't clobber errno right
	before returning NULL.
	* javacomp.c: Include xallocsa.h.
	(compile_java_class): Use allocsa instead of alloca.
	* javaexec.c: Include xallocsa.h.
	(execute_java_class): Use allocsa instead of alloca.
	* relocwrapper.c: Indirectly depends on allocsa.
	* setenv.c: Include allocsa.h.
	(alloca): Remove fallback definition.
	(freea): Remove macro.
	(__add_to_environ) [!_LIBC]: Use allocsa instead of alloca. Use freesa
	instead of freea.
	* Makefile.am (libgettextlib_la_SOURCES): Add allocsa.h, allocsa.c,
	xallocsa.h, xallocsa.c.
	* Makefile.msvc (OBJECTS): Add allocsa.obj, xallocsa.obj.
	(allocsa.obj, xallocsa.obj): New rules.
	* Makefile.vms (OBJECTS): Add allocsa.obj, xallocsa.obj.
	(allocsa.obj, xallocsa.obj): New rules.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-02  Bruno Haible  <bruno@clisp.org>

	* config.charset: Treat the new country name CS like the old country
	name YU.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.msvc (OBJECTS): Fix typo.
	* wait-process.c (cleanup_slaves): Use ANSI C declaration.

2003-11-27  Bruno Haible  <bruno@clisp.org>

	* wait-process.c: On Windows, include windows.h. Needed on mingw.

2003-11-17  Bruno Haible  <bruno@clisp.org>

	* canonicalize.c: #undef realpath after <config.h> but before the